<resources>
    <string name="app_name">Weeki Messenger</string>

    <!-- Activity names -->
    <string name="title_activity_chatbox">New Conversation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_blocked">Blocked User</string>
    <string name="title_activity_addFriend">Find friends online</string>
    <string name="title_activity_createGroup">Create a new group</string>
    <string name="title_activity_selectDialog">Select users</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_status">Status</string>
    <string name="action_new_group">Create group</string>
    <string name="action_logout">Logout</string>

    <string name="action_view_profile">View Profile</string>
    <string name="action_mute">Mute chat</string>
    <string name="action_clear_chat">Clear chat</string>
    <string name="action_delete_conversation">Delete conversation</string>
    <string name="action_block">Block</string>
    <string name="action_update_status">Update description</string>
    <string name="action_add_member">Add members</string>
    <string name="action_leave_group">Leave group</string>

    <!-- Tabs -->
    <string name="groups_tab">Groups</string>
    <string name="chats_tab">Chats</string>
    <string name="friends_tab">Friends</string>

    <!-- Fragments -->
    <string name="no_groups">To create a new group, tap \'More\' at the top of your screen and select \'Create group\'.</string>
    <string name="create_group_sum">Please provide a group name and optional group icon.</string>
    <string name="no_friends">Unfortunately, your friend list is empty. Press \'Add Friend\' at the top of your screen and find new friends.</string>
    <string name="no_dialog_friends">Unfortunately, your friend list is empty.</string>
    <string name="empty_inbox">Your inbox is completely empty. Tap \'Message\' button at the bottom right corner of the screen and create a new message.</string>

    <!-- Attachment View -->
    <string name="attachment_photo">Photo</string>
    <string name="attachment_location">Location</string>

    <!-- Chat Model -->
    <string name="user_blocked">You\'ve blocked this user</string>
    <string name="not_member">You\'re not a member of this group.</string>

    <!-- Settings -->
    <string name="prefs_general">General</string>
    <string name="prefs_general_summary">Change application appearance and more.</string>
    <string name="prefs_account">Account</string>
    <string name="prefs_account_summary">Manage your account and its settings.</string>
    <string name="prefs_notifications">Notifications</string>
    <string name="prefs_notifications_summary">Change notifications settings.</string>
    <string name="prefs_chats">Chats</string>
    <string name="prefs_chats_summary">Manage your chat style, color and more.</string>

    <string name="prefs_general_category_1">Appearance</string>
    <string name="prefs_general_accentStr">Change your accent color to match your mood today.</string>

    <string name="prefs_account_category_1">Profile</string>
    <string name="prefs_account_pPictureStr">Your profile picture is the picture that your friends see next to your name everywhere</string>
    <string name="prefs_account_pStatusStr">Your mood of the day</string>
    <string name="prefs_account_pNameStr">Your name which will help people recognize who you are</string>
    <string name="prefs_account_category_2">Account</string>
    <string name="prefs_account_category_3">Messaging</string>
    <string name="prefs_account_bFragmentStr">Blocked users</string>
    <string name="prefs_account_bFragmentSum">List of users that you have blocked.</string>

    <string name="prefs_notifications_category_1">Notification</string>
    <string name="prefs_notifications_nSoundStr">Play sound for incoming messages.</string>
    <string name="prefs_notifications_category_2">Message notification</string>
    <string name="prefs_notifications_sNotificationStr">Toggle notification on/off for messages.</string>
    <string name="prefs_notifications_nToneStr">Tone to play when a new notification is received</string>
    <string name="prefs_notifications_vibrateStr">Turn on/off vibration when new notification is received.</string>
    <string name="prefs_notifications_category_3">Group notification</string>
    <string name="prefs_notifications_gNotificationStr">Toggle notification on/off for group messages.</string>
    <string name="prefs_notifications_gToneStr">Tone to play when a new notification is received</string>
    <string name="prefs_notifications_gVibrateStr">Turn on/off vibration when new group notification is received.</string>

    <string name="prefs_chat_category">Chat settings</string>
    <string name="prefs_chat_entSendStr">Enter key will send the message</string>
    <string name="prefs_chat_fontStr">Font size for chat bubbles</string>
    <string name="prefs_chat_pBubbleStr">Visibility of sender picture behind chat bubbles.</string>
    <string name="prefs_chat_stampStr">Show timestamps on the bottom of every message.</string>
    <string name="prefs_chat_category_1">Conversation</string>
    <string name="prefs_chat_delConvo">Delete all conversations</string>
    <string name="prefs_chat_delConvoSum">Delete all your private and group conversations.</string>
    <string name="blockedUsersSum">Blocked users will no longer be able to send you messages.\n\nUsers who you block will not get any notification or message regarding this block.</string>

    <!--Admob Ads-->
    <!-- TODO: Uncomment next line and place your adUnit Id to enable Banner ads by Google Admob. -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-your-ad-unit-id</string>-->
</resources>
