<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity">

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item android:id="@+id/action_toggle_notification"
        android:icon="@drawable/ic_notifications_on"
        android:title="Turn notifications on/off"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_add_friend"
        android:icon="@drawable/adduser_vc"
        android:title="@string/action_add_friend"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh"
        android:title="Refresh"
        app:showAsAction="never"/>

    <item android:id="@+id/action_new_group"
        android:title="@string/action_new_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
